atualiza de class para record